--- a/package.json
+++ b/package.json
@@ -2,22 +2,32 @@
   "name": "Cadito",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "dependencies": {
+    "body-parser": "^1.20.0",
+    "debug": "^4.3.4",
+    "dotenv": "^16.0.0",
+    "ejs": "^3.1.7",
     "express": "^4.17.3",
-    "mongose": "0.0.2-security",
-    "morgan": "^1.10.0"
+    "http-errors": "^2.0.0",
+    "husky": "^7.0.4",
+    "lint": "^0.7.0",
+    "mongoose": "^6.3.1",
+    "morgan": "^1.10.0",
+    "pm2": "^5.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.13.0",
+    "nodemon": "^2.0.15",
+    "prettier": "^2.6.2"
   },
-  	
-
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js"
+
+    "dev": "nodemon --watch  src src/app.js"
+
   },
   "keywords": [],
-  "author": "",
+  "author": "Seem",
   "license": "ISC"
 }
