--- a/package.json
+++ b/package.json
@@ -4,28 +4,26 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
-    "body-parser": "^1.20.0",
-    "debug": "^4.3.4",
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "ejs": "^3.1.7",
     "express": "^4.17.3",
-    "http-errors": "^2.0.0",
-    "husky": "^7.0.4",
-    "lint": "^0.7.0",
-    "mongoose": "^6.3.1",
-    "morgan": "^1.10.0",
-    "pm2": "^5.2.0"
+    "mongoose": "^6.3.0",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
+    "@babel/core": "^7.17.9",
+    "@babel/node": "^7.16.8",
+    "@babel/preset-env": "^7.16.11",
     "eslint": "^8.13.0",
-    "nodemon": "^2.0.15",
-    "prettier": "^2.6.2"
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "nodemon": "^2.0.15"
   },
   "scripts": {
-
-    "dev": "nodemon --watch  src src/app.js"
-
+    "dev": "nodemon --exec babel-node --watch src src/app.js",
+    "lint": "eslint src src/app.js"
   },
   "keywords": [],
   "author": "Seem",
